fix: position close-button on video-popup on tablet and mobile version

--- a/src/pages/home/ui/about-section/AboutSection.module.scss
+++ b/src/pages/home/ui/about-section/AboutSection.module.scss
@@ -76,7 +76,7 @@
     gap: rem(20);
     padding: rem(30) 0;
     &__image {
-      width: rem(160);
+      width: rem(130);
       height: rem(120);
       margin: 0 auto;
     }
