--- a/src/widgets/pop-ups/video/VideoPopUp.module.scss
+++ b/src/widgets/pop-ups/video/VideoPopUp.module.scss
@@ -46,7 +46,7 @@
   }
   &__body {
     width: 90%;
-    height: 90%;
+    height: 85%;
     border-radius: 20px;
   }
   &__background {
@@ -82,6 +82,5 @@
 @media(max-width: 520px){
   .video {
     width: 97vw;
-    height: 45vh;
   }
 }
